--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -2,11 +2,11 @@
 species: mouse
 genome_refcode: GRCm39
 endtype: pe
-sampleCSVpath: /SAN/vyplab/transcriptomic_mad_ms_tdp43/splicing/samplesheet_SPC_fixed.csv
+sampleCSVpath: path to example_sample_sheet_two.csv
 # master directory in which output from individual rules is stored (within individual subdirectories, unless overriden below)
 #the top level output folder where all the output files are going to be written
 #now it will sound insane, but I recommend you use full paths to preserve where the data is stored as configs are saved after runs
-project_top_level: /SAN/vyplab/transcriptomic_mad_ms_tdp43/output_spc_star
+project_top_level: path to output file
 
 # master directory in which output from individual rules is stored (within individual subdirectories, unless overriden below)
 #the top level output folder where all the output files are going to be written
@@ -18,7 +18,7 @@ project_top_level: /SAN/vyplab/transcriptomic_mad_ms_tdp43/output_spc_star
 run_name: tdp_splicing
 majiq_top_level: majiq/
 #directory of all the already aligned bam files, this is necessary for building the majic data index from this data
-bam_dir:  /SAN/vyplab/transcriptomic_mad_ms_tdp43/alignment_SPC/STAR_aligned/
+bam_dir:  path to bam files
 #for transcriptome primary_assembly
 scallop_output: scallop_output/
 stringtie_output: stringtie_output/
@@ -46,9 +46,9 @@ annotated_junctions_extra_parameters:
 # gtf: /SAN/vyplab/vyplab_reference_genomes/annotation/mouse/gencode/gencode.vM22.annotation.gtf
 # gff3: /SAN/vyplab/vyplab_reference_genomes/annotation/mouse/gencode/gencode.vM22.annotation.gff3
 
-fasta: /SAN/vyplab/transcriptomic_mad_ms_tdp43/references/GRCm39.primary_assembly.genome.fa
-gtf: /SAN/vyplab/transcriptomic_mad_ms_tdp43/references/gencode.vM37.annotation.gtf
-gff3: /SAN/vyplab/transcriptomic_mad_ms_tdp43/references/gencode.vM37.annotation.gff3
+fasta: path to GRCm39.primary_assembly.genome.fa
+gtf: path to gencode.vM37.annotation.gtf
+gff3: path to gencode.vM37.annotation.gff3
 
 #the path where your samtools is installed
 samtools_path: /share/apps/genomics/samtools-1.9/bin/samtools
